a  miner few changes

--- a/Homework5/Task1/IdentityManagmentService/IdentityManagmentServer/Views/Account/Login.cshtml
+++ b/Homework5/Task1/IdentityManagmentService/IdentityManagmentServer/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LoginViewModel;
 
 <h1>Sign In With</h1>
-    <form asp-controller="Auth" asp-action="Login" method="post">
+<form asp-controller="Account" asp-action="Login" method="post">
         <input type="hidden" asp-for="ReturnUrl" />
         <div>
             <label>Username</label>
