--- a/Homework5/Task1/IdentityManagmentService/MvcLoginClient/Views/Home/Secret.cshtml
+++ b/Homework5/Task1/IdentityManagmentService/MvcLoginClient/Views/Home/Secret.cshtml
@@ -3,4 +3,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+
+
+<h1>Token Information</h1>
+<p>Refresh Token: @Model.RefreshToken</p>
+<p>ID Token Issuer: @Model.IdToken?.Issuer</p>
+<p>Access Token Subject: @Model.AccessToken?.Subject</p>
+<!-- Add more properties as needed -->
